<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#D8686868"
    >


    <androidx.cardview.widget.CardView
        android:id="@+id/rate_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp">
        <LinearLayout
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp">
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_30sdp"
                android:textStyle="bold"
                android:textColor="#FF0000"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:fontFamily="@font/mufin"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/rate_title"
                android:textAlignment="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_20sdp"
                android:textColor="#000000"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/rate_text"
                android:fontFamily="@font/pic"
                android:textAlignment="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"/>
            <RatingBar
                android:layout_gravity="center"
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:progressDrawable="@drawable/rating_bar"
                android:numStars="5"
                android:rating="3"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/submit"
                android:background="#0064B3"
                android:paddingLeft="@dimen/_30sdp"
                android:paddingRight="@dimen/_30sdp"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/rate_yes"
                android:textAllCaps="false"
                android:fontFamily="@font/mufin"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:textSize="@dimen/_12sdp"
                android:textColor="#4c4c4c"
                android:gravity="center"
                android:layout_gravity="center"
                android:id="@+id/tvLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/rate_exit"
                android:fontFamily="@font/mufin"
                android:textAlignment="center"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:gravity="center"
        android:id="@+id/close"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_10sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="#0064B3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_close"
            android:backgroundTint="@android:color/white" />
    </RelativeLayout>



</RelativeLayout>