<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">


    <!--preview image-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--preview image-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:background="#B8B8B8">

            <ImageView
                android:id="@+id/interstitial_preview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop" />

            <RelativeLayout
                android:id="@+id/interstitial_preview_progress"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_centerInParent="true"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_regular"
                    android:gravity="center"
                    android:text="Ad"
                    android:layout_centerInParent="true"
                    android:textColor="#555555"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal"
                    tools:ignore="HardcodedText" />

                <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:indeterminateDrawable="@drawable/sp_progress" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>



    <!--Content-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <!--Content Text-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">




            <!--Buttons Install and close.-->
            <LinearLayout
                android:id="@+id/buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                tools:ignore="UseCompoundDrawables,UselessParent">


                <RelativeLayout
                    android:id="@+id/interstitial_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:minHeight="@dimen/_30sdp"
                    android:paddingRight="@dimen/_30sdp"
                    android:paddingLeft="@dimen/_30sdp"
                    android:background="#E4E4E4"
                    android:gravity="center">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/closeText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/sans_regular"
                            android:text="@string/close"
                            android:textAllCaps="false"
                            android:textColor="#555555"
                            android:textSize="@dimen/_14sdp"
                            android:textStyle="normal" />

                        <TextView
                            android:id="@+id/closeCount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_3sdp"
                            android:textAllCaps="false"
                            android:textColor="#454545"
                            android:textSize="@dimen/_12sdp"
                            android:textStyle="normal" />


                    </LinearLayout>


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/interstitial_install"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/_30sdp"
                    android:paddingRight="@dimen/_40sdp"
                    android:paddingLeft="@dimen/_40sdp"
                    android:background="#FF000000"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/interstitial_install_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_medium"
                        android:text="@string/banner_install"
                        android:textAllCaps="false"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="normal" />


                </RelativeLayout>





            </LinearLayout>



        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/button_install"
        android:padding="@dimen/_7sdp"
        android:text="AD"
        android:textColor="@color/white"
        android:textSize="@dimen/_8sdp"
        tools:ignore="HardcodedText" />



</RelativeLayout>
